--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                     <div class='options'>
                         <h3>Options</h3>
                         <p>-Zoom the map to the desired intial level</p>
+                        <p>-Inline map (makes it smaller and off to the right, default: full width)?</p>
+                        <p class='inline'> 
+                            <button class='option-fullwidth selected'>Full width</button>
+                            <button class='option-inline'>Inline</button>
+                        </p>
                         <p>-If you want a popup with text (leave blank to remove popup)</p>
                         <input class='option-popup'>
                         <p>-If you want an icon, chose it from <a target='_blank' href='https://www.mapbox.com/maki/'>here</a> (use the bottom name, leave blank for default)</p>
