multi maps and default inline

--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
                     <div class='preview-map'></div>
                     <div class='options'>
                         <h3>Options</h3>
-                        <p>-Zoom the map to the desired intial level</p>
-                        <p>-Inline map (makes it smaller and off to the right, default: full width)?</p>
+                        <p>-Drag the marker to fine-tune the location</p>
+                        <p>-Zoom the map to the desired level</p>
+                        <p>-Make it a full width map (like above, default: inline)?</p>
                         <p class='inline'> 
-                            <button class='option-fullwidth selected'>Full width</button>
-                            <button class='option-inline'>Inline</button>
+                            <button class='option-inline selected'>Inline</button>
+                            <button class='option-fullwidth'>Full width</button>
                         </p>
-                        <p>-If you want a popup with text (leave blank to remove popup)</p>
+                        <p>-Enter text here if want a popup on click (leave blank to remove popup)</p>
                         <input class='option-popup'>
                         <p>-If you want an icon, chose it from <a target='_blank' href='https://www.mapbox.com/maki/'>here</a> (use the bottom name, leave blank for default)</p>
                         <input class='option-icon'>
