--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </p>
                 <p class='instructions'>
                     Enter an complete address or a pair of coordinates coordinates (comma delimited, include decimals).
-                    <a class='demo' href='#'>Load sample data</a>
+                    <a class='demo' href='#'>Start in Boston</a> or <a target='_blank' href='http://prdedit.bostonglobe.com/Page/Boston/Content/Metro/Advance/Stories/BGCOM-map-test.xml'>see examples</a>.
                 </p>
                 <textarea class='address'></textarea>
                 <button class='generate'>Get started</button>
@@ -37,7 +37,12 @@
                         <h3>Options</h3>
                         <p>-Drag the marker to fine-tune the location</p>
                         <p>-Zoom the map to the desired level</p>
-                        <p>-Make it a full width map (like above, default: inline)?</p>
+                        <p>-Enable zoom and pan controls? (default: off)</p>
+                        <p class='controls'> 
+                            <button class='option-disable-controls selected'>Disable</button>
+                            <button class='option-enable-controls'>Enable</button>
+                        </p>
+                        <p>-Make it a full width map? (default: inline)</p>
                         <p class='inline'> 
                             <button class='option-inline selected'>Inline</button>
                             <button class='option-fullwidth'>Full width</button>
