--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
             <section>
                 <div class='final hide'>
                     <textarea class='output-code'></textarea>
+                    <h3>Methode best practices</h3>
+                    <ul>
+                        <li>Create a new object (.jpt, type Web) in [section]/WebGraphics/[year]/[month]/[project-name]</li>
+                        <li>Paste in the above code</li>
+                        <li>Insert jpt into story in desired location</li>
+                        <li>Talk to a producer on how to slot in a jpt</li>
+                    </ul>
                 </div>
                 <div class='credits'>
                     See the <a target='_blank' href='https://github.com/russellgoldenberg/responsive-locator-map-generator'>github repo</a> to submit issues and/or feature requests.
