--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         </p>
                         <p>-Enter text here if want a popup on click (leave blank to remove popup)</p>
                         <input class='option-popup'>
-                        <p>-If you want an icon, chose it from <a target='_blank' href='https://www.mapbox.com/maki/'>here</a> (use the bottom name, leave blank for default)</p>
-                        <input class='option-icon'>
+                        <!-- <p>-If you want an icon, chose it from <a target='_blank' href='https://www.mapbox.com/maki/'>here</a> (use the bottom name, leave blank for default)</p>
+                        <input class='option-icon'> -->
                     </div>
                     <button class='generate-code'>Generate code</button>
                 </div>
