--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                             <button class='option-disable-controls selected'>Disable</button>
                             <button class='option-enable-controls'>Enable</button>
                         </p>
-                        <p>-Make it a full width map? (default: inline)</p>
+                        <!-- <p>-Make it a full width map? (default: inline)</p>
                         <p class='inline'> 
                             <button class='option-inline selected'>Inline</button>
                             <button class='option-fullwidth'>Full width</button>
-                        </p>
-                        <p>-Enter text here if want a popup on click (leave blank to remove popup)</p>
-                        <input class='option-popup'>
+                        </p> -->
+                        <!-- <p>-Enter text below if want a popup on click (leave blank to remove popup)</p>
+                        <input class='option-popup'> -->
                         <!-- <p>-If you want an icon, chose it from <a target='_blank' href='https://www.mapbox.com/maki/'>here</a> (use the bottom name, leave blank for default)</p>
                         <input class='option-icon'> -->
                     </div>
